@@ -1,3 +1,9 @@
+2009-06-16  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* New libtinymail-camel/tny-camel-html-to-text-stream.[ch]:
+	new stream that wraps a stream with html format, so its output
+	is a plain text version of that stream.
+
 2009-06-15  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-send-queue.c (check_cancel): call
